--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     {{ form_start(form) }}
-    {{ form_widget(form) }}
+    
+    <ul class="tags" data-prototype="{{ form_widget(form.tickets_id.vars.prototype)|e('html_attr') }}">
+    </ul>
+    {{ form_rest(form) }}
     {{ form_end(form) }}
+    
+<script src="/js/jquery-3.3.1.min.js"></script>
+<script src="/js/formcollection.js"></script>
 {% endblock %}
