--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,5 +18,6 @@
     </nav>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <script src="/js/jquery-3.3.1.min.js"></script>
     </body>
 </html>
