Ajout formualaire stripe + POST

--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -9,6 +9,6 @@
     </ul>
     {{ form_rest(form) }}
     {{ form_end(form) }}
-    
+    <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/formcollection.js"></script>
 {% endblock %}
