--- a/templates/order/stripe.html.twig
+++ b/templates/order/stripe.html.twig
@@ -3,5 +3,20 @@
 {% block title %}Stripe {% endblock %}
 
 {% block body %}
-    
+
+    <form action="/payement" method="POST">
+    <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_TYooMQauvdEDq54NiTphI7jx"
+    data-currency="eur"
+    data-email="test@gmail.com"
+    data-amount="999"
+    data-name="Stripe.com"
+    data-description="Example charge"
+    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+    data-locale="auto"
+    data-zip-code="true">
+  </script>
+</form>
+
 {% endblock %}
