Ajout gestion d'erreur stripe

--- a/templates/order/stripe.html.twig
+++ b/templates/order/stripe.html.twig
@@ -4,6 +4,14 @@
 
 {% block body %}
 
+  {% for flashMessage in app.flashes('error') %}
+
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <h4 class="alert-heading">Error</h4>
+    <p>{{ flashMessage }}</p>
+</div>
+
+{% endfor %}
     <form action="/payement?id={{ idint }}" method="POST">
     <script
     src="https://checkout.stripe.com/checkout.js" class="stripe-button"
