--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -3,21 +3,40 @@
 {% block title %}Commander {% endblock %}
 
 {% block body %}
-    {% for flashMessage in app.flashes('error') %}
+
+    <header class="masthead">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center justify-content-center text-center">
+        <div class="col-lg-10 align-self-end">
+          <h1 class="text-uppercase text-white font-weight-bold">Bienvenue sur le site du musée du Louvre</h1>
+          <hr class="my-4">
+        </div>
+        <div class="col-lg-8 align-self-baseline">
+          <p class="font-weight-light text-danger mb-5">Vous pouvez commander vos billets en dessous!</p>
+          <a class="btn btn-primary" href="#ticket">Commander vos billets </a>
+        </div>
+      </div>
+    </div>
+    </header>
+        {% for flashMessage in app.flashes('error') %}
 
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <h4 class="alert-heading">Error</h4>
+        <h4 class="alert-heading">Erreur</h4>
         <p>{{ flashMessage }}</p>
     </div>
-
     {% endfor %}
-
-    {{ form_start(form) }}
-    
-    <ul class="tags" data-prototype="{{ form_widget(form.tickets_id.vars.prototype)|e('html_attr') }}">
-    </ul>
-    {{ form_rest(form) }}
-    {{ form_end(form) }}
+        <div class="col-lg-12 text-center" id="ticket">
+    	<div class="card my-4">
+              <h5 class="card-header">Achat Ticket</h5>
+              <div class="card-body">
+                {{ form_start(form) }}
+                <ul class="tags" data-prototype="{{ form_widget(form.tickets_id.vars.prototype)|e('html_attr') }}">
+                </ul>
+                {{ form_rest(form) }}
+                {{ form_end(form) }}
+            </div>
+        </div>
+    </div>
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/formcollection.js"></script>
 {% endblock %}
