--- a/templates/order/stripe.html.twig
+++ b/templates/order/stripe.html.twig
@@ -7,7 +7,7 @@
   {% for flashMessage in app.flashes('error') %}
 
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <h4 class="alert-heading">Error</h4>
+    <h4 class="alert-heading">Erreur</h4>
     <p>{{ flashMessage }}</p>
 </div>
 
