--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -25,6 +25,7 @@
         <p>{{ flashMessage }}</p>
     </div>
     {% endfor %}
+    <div class="container">
         <div class="col-lg-12 text-center" id="ticket">
     	<div class="card my-4">
               <h5 class="card-header">Achat Ticket</h5>
@@ -36,6 +37,7 @@
                 {{ form_end(form) }}
             </div>
         </div>
+    </div>
     </div>
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/formcollection.js"></script>
