Modifications front-end

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <a class="navbar-brand" href="/">Le Louvre</a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active text-primary" href="#ticket">Commander</a>
+                <a class="nav-item nav-link active text-primary" href="/#ticket">Commander</a>
 
             </div>
         </div>
