--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -3,7 +3,6 @@
 {% block title %}Commander {% endblock %}
 
 {% block body %}
-
     <header class="masthead">
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
@@ -30,7 +29,10 @@
     	<div class="card my-4">
               <h5 class="card-header">Achat Ticket</h5>
               <div class="card-body">
+              {% form_theme form 'bootstrap_4_layout.html.twig' %}
                 {{ form_start(form) }}
+                {{ form_row(form.email) }}
+                {{ form_row(form.date) }}
                 <ul class="tags" data-prototype="{{ form_widget(form.tickets_id.vars.prototype)|e('html_attr') }}">
                 </ul>
                 {{ form_rest(form) }}
