--- a/templates/order/payement.html.twig
+++ b/templates/order/payement.html.twig
@@ -3,8 +3,19 @@
 {% block title %}Commander {% endblock %}
 
 {% block body %}
-Payement Work
-{% for ticket in tickets %}
-        <li>{{ ticket.id }}</li>
-    {% endfor %}
+
+<header class="masthead">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center justify-content-center text-center">
+        <div class="col-lg-10 align-self-end">
+          <h1 class="text-uppercase text-white font-weight-bold">Merci d'avoir commandé vos billets sur le site du musée du Louvre</h1>
+          <hr class="my-4">
+        </div>
+        <div class="col-lg-8 align-self-baseline">
+          <p class="font-weight-light text-danger mb-5">Vous pouvez retrouver vos tickets dans votre boîte mail: {{ email }}.</p>
+          <a class="btn btn-primary" href="/#ticket">Commander d'autres billets </a>
+        </div>
+      </div>
+    </div>
+    </header>
 {% endblock %}
