Modifications Front-End

--- a/templates/email/index.html.twig
+++ b/templates/email/index.html.twig
@@ -10,7 +10,7 @@
 
 <body>
    <h2>Bonjour,
-    Merci d'avoir commandé vos Ticket pour la visite du Musée du Louvre.
+    Merci d'avoir commandé vos Tickets pour la visite du Musée du Louvre.
     Votre Numéro de Commande: {{ orders.token }}
     </br>
     Vos Billets:</h2>
