--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -55,10 +55,11 @@
     
     <script>
       $(document).ready(function() {
-        $('.datepicker').datepicker({
+        $('.datevisit').datepicker({
         format: 'yyyy-mm-dd',
         language: 'fr',
         autoclose: 'true',
+        startDate:new Date(),
         daysOfWeekDisabled:'2,0',
       });
       });
